# wordle-witches

./: .gitignore  README.md  compose.yaml  pyproject.toml
my-remix-app/: package-lock.json
my-remix-app/app/: root.tsx
my-remix-app/app/routes/: contacts.$contactId.destroy.tsx  contacts.$contactId.tsx  contacts.$contactId_.edit.tsx
resources/: batch-write-witches.py  create-table-player.yaml  input-data-bingo.json  input-data.json  scraping.py  witches.csv  witches.html
src/wordle_witches/: __init__.py  server.py
src/wordle_witches/adapter/: controller.py  repository.py
src/wordle_witches/domain/: game.py  player.py  repository.py  witch.py
wordle-witches-clj/: .gitignore  CHANGELOG.md  README.md  project.clj
wordle-witches-clj/src/testapp/: core.clj  feverclj.clj  importcsv.clj  scraping.clj
wordle-witches-clj/test/testapp/: feverclj_test.clj
wordle-witches-cpp/: .gitignore  CMakeLists.txt  compile_flags.txt  main.cpp  sample.sql
wordle-witches-cpp/src/: asobi.cpp  asobi.hpp  import_csv.cpp  import_csv.hpp  server.cpp  server.hpp
wordle-witches-cpp/src/libcsv/: CMakeLists.txt
wordle-witches-cpp/src/libcsv/csv/: reader.cpp  reader.hpp
wordle-witches-next/: package-lock.json  package.json
wordle-witches-next/src/actions/auth/: actions.ts
wordle-witches-next/src/actions/todos/: actions.tsx
wordle-witches-next/src/app/: error.tsx  page.tsx
wordle-witches-next/src/app/api/auth/confirm/: route.ts
wordle-witches-next/src/app/signin/: page.tsx
wordle-witches-next/src/app/signup/: page.tsx
wordle-witches-next/src/components/auth/: signout-button.tsx
wordle-witches-next/src/components/todos/: add-todo.tsx  clear-actions.tsx  delete-todo.tsx  todo-checkbox.tsx  todo-data.tsx  todo.tsx  todos.tsx
wordle-witches-next/src/utils/supabase/: server.ts
wordle-witches-py/: pyproject.toml
wordle-witches-py/resources/: create-table-bingo.yaml  create-table.yaml  scraping.py
wordle-witches-py/src/wordle_witches/adapter/: controller.py
wordle-witches-py/src/wordle_witches/domain/: game.py  player.py  witch.py
wordle-witches-remix/: package-lock.json  package.json
wordle-witches-remix/app/: root.tsx
wordle-witches-remix/app/routes/: _index.tsx  witches._index.tsx
wordle-witches-ts-effect/: .gitignore  README.md  bun.lockb  package.json  pnpm-lock.yaml
wordle-witches-ts-effect/src/: index.ts
