[project]
name = "wordle-witches"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "k5ki", email = "kkadowaki@protonmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
